# autosar-soa-gateway

./: .gitattributes  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cmake/: Toolchain-QNX.cmake  Toolchain-S32G-M7.cmake
docs/: architecture.md  verification-report.md
docs/compliance/: nist-csf.md  openchain-iso18974.md  openchain-iso5230.md
include/: DdsQosPolicy.hpp  DeadSubscriberMonitor.hpp  HseAdapter.hpp  IamSecurityController.hpp  IpcBridge.hpp  NetworkAdapter.hpp  RateLimiter.hpp  SafetyArbitrator.hpp  SoaServiceManager.hpp
sbom/: norxs-soa-gateway.spdx.json
src/: DdsQosPolicy.cpp  DeadSubscriberMonitor.cpp  HseAdapter.cpp  IamSecurityController.cpp  IpcBridge.cpp  RateLimiter.cpp  SafetyArbitrator.cpp  SoaServiceManager.cpp
tests/: test_safety_arbitrator.cpp  test_soa_gateway.cpp
